css/bootstrap-theme.css
:root {
  --prism-maintext: var(--bs-gray-dark, #000);
  --prism-background: var(--bs-light, #f5f2f0);
  --prism-text: var(--bs-gray, #999);
  --prism-keywords: var(--bs-teal, #07a);
  --prism-punctuation: var(--bs-gray, #999);
  --prism-functions: var(--bs-orange, #f08d49);
  --prism-strings:  var(--bs-green, #690);
  --prism-namespace:  var(--bs-pink, #e2777a);
  --prism-names: var(--bs-blue, #6196cc);
  --prism-symbol: var(--bs-pink, #DD4A68);
  --prism-url: var(--bs-cyan, #67cdcc);
}

